--- a/user-microservice/package.json
+++ b/user-microservice/package.json
@@ -8,5 +8,8 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
