--- a/payment-microservice/package.json
+++ b/payment-microservice/package.json
@@ -8,5 +8,8 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
