--- a/notification-microservice/package.json
+++ b/notification-microservice/package.json
@@ -8,5 +8,9 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   }
 }
