--- a/account-microservice/package.json
+++ b/account-microservice/package.json
@@ -2,15 +2,16 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6"
   }
