--- a/investment-microservice/package.json
+++ b/investment-microservice/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0"
   }
 }
