--- a/payment-microservice/package.json
+++ b/payment-microservice/package.json
@@ -7,10 +7,12 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6"
   }
