--- a/investment-microservice/package.json
+++ b/investment-microservice/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "investment-microservice",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Olawuwo Abideen",
+  "license": "ISC",
+  "description": "A Backend to Banking App",
+
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
