--- a/notification-microservice/package.json
+++ b/notification-microservice/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "notification-microservice",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Olawuwo Abideen",
+  "license": "ISC",
+  "description": "A Backend to Banking App",
+
   "dependencies": {
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
