--- a/payment-microservice/package.json
+++ b/payment-microservice/package.json
@@ -1,4 +1,15 @@
-{
+{  
+"name": "payment-microservice",
+"version": "1.0.0",
+"main": "index.js",
+"scripts": {
+  "start": "nodemon src/index.ts",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+"author": "Olawuwo Abideen",
+"license": "ISC",
+"description": "A Backend to Banking App",
+
   "dependencies": {
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
