--- a/account-microservice/package.json
+++ b/account-microservice/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "account-microservice",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Olawuwo Abideen",
+  "license": "ISC",
+  "description": "A Backend to Banking App",
+
   "dependencies": {
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
@@ -14,15 +25,5 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6"
-  },
-  "name": "account-microservice",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Olawuwo Abideen",
-  "license": "ISC",
-  "description": ""
+  }
 }
