--- a/lifestyle-microservice/package.json
+++ b/lifestyle-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "account-microservice",
+  "name": "lifestyle-microservice",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
