--- a/investment-microservice/package.json
+++ b/investment-microservice/package.json
@@ -9,11 +9,11 @@
   "author": "Olawuwo Abideen",
   "license": "ISC",
   "description": "A Backend to Banking App",
-
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
