--- a/lifestyle-microservice/package.json
+++ b/lifestyle-microservice/package.json
@@ -9,7 +9,6 @@
   "author": "Olawuwo Abideen",
   "license": "ISC",
   "description": "A Backend to Banking App",
-
   "dependencies": {
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
@@ -18,6 +17,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
