--- a/investment-microservice/package.json
+++ b/investment-microservice/package.json
@@ -13,6 +13,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "kafkajs": "^2.2.4",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
